--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
+  <!-- 基本 SEO -->
   <meta charset="UTF-8">
+  <meta name="description" content="🎙️ 直播時間軸小幫手 — 快速標記 YouTube 直播歌曲時間戳，一鍵產生章節時間軸！">
+  <!-- Open Graph (Facebook / LINE / Discord / Telegram 都會用) -->
+  <meta property="og:title" content="直播時間軸小幫手">
+  <meta property="og:description" content="快速標記 YouTube 直播歌曲時間戳，一鍵產生章節時間軸！支援多工作表、歌曲建議、跨日計算。">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lumus-lab.github.io/livestream-timeline/">
+  <meta property="og:image" content="https://lumus-lab.github.io/livestream-timeline/assets/preview.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="直播時間軸小幫手">
+  <meta name="twitter:description" content="快速標記 YouTube 直播歌曲時間戳，一鍵產生章節時間軸！支援多工作表、歌曲建議、跨日計算。">
+  <meta name="twitter:image" content="https://lumus-lab.github.io/livestream-timeline/assets/preview.png">
   <title>直播時間軸小幫手</title>
   <style>
     body {
